gcc/testsuite/rust/rustc/ui/imports/issue-28134.rs
//@ compile-flags: --test

#![allow(soft_unstable)]
#![test]
// { dg-error "" "" { target *-*-* } .-1 }

